backendservice.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
  name: backend-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    app: backend
  type: ClusterIP
